# lime

./: .gitignore  README.md  config.ts  hiae_payload.ts  main.py  main.ts  package.json  pyproject.toml  server.py  server.ts  test.py  test_engine.py
assets/pinyin/: 8105.dict.yaml
assets/pinyin/script/: gen_zi_pinyin.py
interface/: context.html  demo.html  index.html  package.json  pnpm-lock.yaml  statistics.html  vite.config.ts
interface/src/: context.ts  demo.ts  lime_api.ts  main.ts  nav.ts  statistics.ts
key_map/pinyin/: gen_zi_pinyin.ts  keys_to_pinyin.ts
key_map/pinyin/test/: test.ts
rime/: llm.schema.yaml
rime/lua/: fetch_text.lua  llm_pinyin.lua
test/: input_speed_data.json  test.ts  test_de.ts  test_sentence.ts  test_text.ts  test_user_word.ts
tools/: resort_feq.ts
userword/: preload_word.ts
utils/: all_pinyin.py  config.d.ts  secure_payload.ts
utils/hiae/: aes.ts  constants.ts  hiae.ts  index.ts  types.ts  utils.ts
