[project]
name = "ai-ime"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.2",
    "llama-cpp-python>=0.3.2",
    "py-spy>=0.4.1",
    "pypinyin>=0.55.0",
    "torch>=2.9.0",
    "transformers>=4.57.3",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
